k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osop-messaging
  labels:
    name: osop-messaging
    app: messaging-platform
